@@ -77,216 +77,11 @@ Additionally, configure which [Datadog site][2] to which you want to send data.
 
 {{< /tabs >}}
 
-## Installing the Java tracer
-
-Install and enable the Java tracer v0.101.0 or later.
-
-{{< tabs >}}
-{{% tab "Maven" %}}
-
-Add a Maven profile in your root `pom.xml` configuring the Datadog Java tracer dependency and the `javaagent` arg property, replacing `$VERSION` with the latest version of the tracer accessible from the [Maven Repository][1] (without the preceding `v`: ![Maven Central][2]), and specifying the name of the service or library under test with the `-Ddd.service` property:
-
-{{< code-block lang="xml" filename="pom.xml" >}}
-<profile>
-  <id>dd-civisibility</id>
-  <activation>
-    <activeByDefault>false</activeByDefault>
-  </activation>
-  <properties>
-    <dd.java.agent.arg>-javaagent:${settings.localRepository}/com/datadoghq/dd-java-agent/$VERSION/dd-java-agent-$VERSION.jar -Ddd.service=my-java-app -Ddd.civisibility.enabled=true</dd.java.agent.arg>
-  </properties>
-  <dependencies>
-    <dependency>
-        <groupId>com.datadoghq</groupId>
-        <artifactId>dd-java-agent</artifactId>
-        <version>$VERSION</version>
-        <scope>provided</scope>
-    </dependency>
-  </dependencies>
-</profile>
-{{< /code-block >}}
-
-
-[1]: https://mvnrepository.com/artifact/com.datadoghq/dd-java-agent
-[2]: https://img.shields.io/maven-central/v/com.datadoghq/dd-java-agent?style=flat-square
-{{% /tab %}}
-{{% tab "Gradle" %}}
-
-Add the `ddTracerAgent` entry to the `configurations` task block, and add the Datadog Java tracer dependency, replacing `$VERSION` with the latest version of the tracer available in the [Maven Repository][1] (without the preceding `v`: ![Maven Central][2]):
-
-{{< code-block lang="groovy" filename="build.gradle" >}}
-configurations {
-    ddTracerAgent
-}
-dependencies {
-    ddTracerAgent "com.datadoghq:dd-java-agent:$VERSION"
-}
-{{< /code-block >}}
-
-
-[1]: https://mvnrepository.com/artifact/com.datadoghq/dd-java-agent
-[2]: https://img.shields.io/maven-central/v/com.datadoghq/dd-java-agent?style=flat-square
-{{% /tab %}}
-{{< /tabs >}}
-
-### Installing the Java compiler plugin
-
-The Java compiler plugin works in combination with the Java tracer, and provides it with additional source code information. Installing the plugin is an optional step that improves performance and accuracy of certain CI visibility features.
-
-The plugin works with the standard `javac` compiler. Eclipse JDT compiler is not supported.
-
-If the configuration is successful, you should see the line `DatadogCompilerPlugin initialized` in your compiler's output.
-
-{{< tabs >}}
-{{% tab "Maven" %}}
-
-Include the snippets below in the relevant sections of the same Maven profile that you have added to your root `pom.xml` for the tracer configuration.
-Replace `$VERSION` with the latest version of the artifacts accessible from the [Maven Repository][1] (without the preceding `v`: ![Maven Central][2]):
-
-{{< code-block lang="xml" filename="pom.xml" >}}
-<dependency>
-    <groupId>com.datadoghq</groupId>
-    <artifactId>dd-javac-plugin-client</artifactId>
-    <version>$VERSION</version>
-</dependency>
-{{< /code-block >}}
-
-{{< code-block lang="xml" filename="pom.xml" >}}
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.5</version>
-            <configuration>
-                <annotationProcessorPaths>
-                    <annotationProcessorPath>
-                        <groupId>com.datadoghq</groupId>
-                        <artifactId>dd-javac-plugin</artifactId>
-                        <version>$VERSION</version>
-                    </annotationProcessorPath>
-                </annotationProcessorPaths>
-                <compilerArgs>
-                    <arg>-Xplugin:DatadogCompilerPlugin</arg>
-                </compilerArgs>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
-{{< /code-block >}}
-
-The Maven compiler plugin supports the [`annotationProcessorPaths`][3] property starting with version 3.5. If you have to use an older version, declare the Datadog compiler plugin as a regular dependency in your project.
-
-Additionally, if you are using JDK 16 or later, add the following lines to the [`.mvn/jvm.config`][4] file in your project's base directory:
-
-{{< code-block lang="properties" filename=".mvn/jvm.config" >}}
---add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-{{< /code-block >}}
-
-[1]: https://mvnrepository.com/artifact/com.datadoghq/dd-javac-plugin
-[2]: https://img.shields.io/maven-central/v/com.datadoghq/dd-javac-plugin?style=flat-square
-[3]: https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html#annotationProcessorPaths
-[4]: https://maven.apache.org/configure.html#mvn-jvm-config-file
-
-{{% /tab %}}
-{{% tab "Gradle" %}}
-
-Add the plugin-client JAR to the project's classpath, add the plugin JAR to the compiler's annotation processor path, and pass the plugin argument to the tasks that compile Java classes.
-
-Replace `$VERSION` with the latest version of the artifacts accessible from the [Maven Repository][1] (without the preceding `v`: ![Maven Central][2]):
-
-{{< code-block lang="groovy" filename="build.gradle" >}}
-if (project.hasProperty("dd-civisibility")) {
-    dependencies {
-        implementation 'com.datadoghq:dd-javac-plugin-client:$VERSION'
-        annotationProcessor 'com.datadoghq:dd-javac-plugin:$VERSION'
-        testAnnotationProcessor 'com.datadoghq:dd-javac-plugin:$VERSION'
-    }
-
-    tasks.withType(JavaCompile).configureEach {
-        options.compilerArgs.add('-Xplugin:DatadogCompilerPlugin')
-    }
-}
-{{< /code-block >}}
-
-Additionally, if you are using JDK 16 or later, add the following lines to your [gradle.properties][3] file:
-
-{{< code-block lang="properties" filename="gradle.properties" >}}
-org.gradle.jvmargs=\
---add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED  \
---add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-{{< /code-block >}}
-
-[1]: https://mvnrepository.com/artifact/com.datadoghq/dd-javac-plugin
-[2]: https://img.shields.io/maven-central/v/com.datadoghq/dd-javac-plugin?style=flat-square
-[3]: https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_configuration_properties
-
-{{% /tab %}}
-{{< /tabs >}}
-
-## Instrumenting your tests
-
-{{< tabs >}}
-{{% tab "Maven" %}}
-
-Configure the [Maven Surefire Plugin][1] or the [Maven Failsafe Plugin][2] (or both if you use both) to use the Datadog Java Agent:
-
-* If using the [Maven Surefire Plugin][1]:
-
-{{< code-block lang="xml" filename="pom.xml" >}}
-<plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-surefire-plugin</artifactId>
-  <configuration>
-    <argLine>${dd.java.agent.arg}</argLine>
-  </configuration>
-</plugin>
-{{< /code-block >}}
-
-* If using the [Maven Failsafe Plugin][2]:
-
-{{< code-block lang="xml" filename="pom.xml" >}}
-<plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-failsafe-plugin</artifactId>
-  <configuration>
-     <argLine>${dd.java.agent.arg}</argLine>
-  </configuration>
-  <executions>
-      <execution>
-        <goals>
-           <goal>integration-test</goal>
-           <goal>verify</goal>
-        </goals>
-      </execution>
-  </executions>
-</plugin>
-{{< /code-block >}}
-
-[1]: https://maven.apache.org/surefire/maven-surefire-plugin/
-[2]: https://maven.apache.org/surefire/maven-failsafe-plugin/
-{{% /tab %}}
-{{% tab "Gradle" %}}
-
-Configure the `test` Gradle task by adding to the `jvmArgs` attribute the `-javaagent` argument targeting the Datadog Java tracer based on the `configurations.ddTracerAgent` property, specifying the name of the service or library under test with the `-Ddd.service` property:
-
-{{< code-block lang="groovy" filename="build.gradle" >}}
-test {
-  if(project.hasProperty("dd-civisibility")) {
-    jvmArgs = ["-javaagent:${configurations.ddTracerAgent.asPath}", "-Ddd.service=my-java-app", "-Ddd.civisibility.enabled=true"]
-  }
-}
-{{< /code-block >}}
-
-{{% /tab %}}
-{{< /tabs >}}
-
 ## Downloading tracer library
+
+You only need to download the tracer library once for each server.
+
+If the tracer library is already available locally on the server, you can proceed directly to running the tests.
 
 {{< tabs >}}
 {{% tab "Maven" %}}
@@ -294,10 +89,10 @@ test {
 Declare `DD_TRACER_VERSION` variable with the latest version of the artifacts accessible from the [Maven Repository][1] (without the preceding `v`: ![Maven Central][2]):
 
 {{< code-block lang="shell" >}}
-DD_TRACER_VERSION=... // e.g. 1.12.0
+DD_TRACER_VERSION=... // e.g. 1.14.0
 {{< /code-block >}}
 
-Run the command below to download the tracer JAR and add it to your local Maven repository:
+Run the command below to download the tracer JAR to your local Maven repository:
 
 {{< code-block lang="shell" >}}
 mvn org.apache.maven.plugins:maven-dependency-plugin:get -Dartifact=com.datadoghq:dd-java-agent:$DD_TRACER_VERSION
@@ -312,7 +107,7 @@ mvn org.apache.maven.plugins:maven-dependency-plugin:get -Dartifact=com.datadogh
 Declare `DD_TRACER_VERSION` variable with the latest version of the artifacts accessible from the [Maven Repository][1] (without the preceding `v`: ![Maven Central][2]):
 
 {{< code-block lang="shell" >}}
-DD_TRACER_VERSION=... // e.g. 1.12.0
+DD_TRACER_VERSION=... // e.g. 1.14.0
 {{< /code-block >}}
 
 Declare `DD_TRACER_FOLDER` variable with the path to the folder where you want to store the downloaded JAR:
@@ -321,7 +116,7 @@ Declare `DD_TRACER_FOLDER` variable with the path to the folder where you want t
 DD_TRACER_FOLDER=... // e.g. ~/.datadog
 {{< /code-block >}}
 
-Run the command below to download the tracer JAR and save it into the specified folder:
+Run the command below to download the tracer JAR to the specified folder:
 
 {{< code-block lang="shell" >}}
 curl https://repo1.maven.org/maven2/com/datadoghq/dd-java-agent/$DD_TRACER_VERSION/dd-java-agent-$DD_TRACER_VERSION.jar --output $DD_TRACER_FOLDER/dd-java-agent-$DD_TRACER_VERSION.jar
@@ -338,19 +133,15 @@ curl https://repo1.maven.org/maven2/com/datadoghq/dd-java-agent/$DD_TRACER_VERSI
 {{< tabs >}}
 {{% tab "Maven" %}}
 
-Declare `DD_TRACER_VERSION` variable with the version of the tracer that you have downloaded to your local Maven repository:
+Make sure to set the `DD_TRACER_VERSION` environment variable to the tracer version you have previously downloaded.
 
-{{< code-block lang="shell" >}}
-DD_TRACER_VERSION=... // e.g. 1.12.0
-{{< /code-block >}}
+Run your tests using the `MAVEN_OPTS` environment variable to specify the path to the Datadog Java Tracer JAR.
 
-Run your tests using the `MAVEN_OPTS` environment variable to specify a path to the Datadog Java Tracer JAR.
+When specifying tracer arguments, include the following:
 
-In the tracer arguments, specify the following:
-
-* CI Visibility is enabled by setting the `dd.civisibility.enabled` property to `true`.
-* The environment where tests are being run (for example, `local` when running tests on a developer workstation or `ci` when running them on a CI provider) is defined in the `dd.env` property.
-* The name of the service or library that is being tested is defined in the `dd.service` property.
+* Enable CI visibility by setting the `dd.civisibility.enabled` property to `true`.
+* Define the environment where the tests are being run using the `dd.env property` (for example `local` when running tests on a developer workstation or `ci` when running them on a CI provider).
+* Define the name of the service or library being tested in the `dd.service property`.
 
 For example:
 
@@ -366,25 +157,15 @@ mvn clean verify -Pdd-civisibility
 {{% /tab %}}
 {{% tab "Gradle" %}}
 
-Declare `DD_TRACER_VERSION` variable with the version of the tracer that you have downloaded to your host:
+Make sure to set the `DD_TRACER_VERSION` environment variable to the tracer version you have previously downloaded, and the `DD_TRACER_FOLDER` variable to the path where you have downloaded the tracer.
 
-{{< code-block lang="shell" >}}
-DD_TRACER_VERSION=... // e.g. 1.12.0
-{{< /code-block >}}
+Run your tests using the `org.gradle.jvmargs` system property to specify the path to the Datadog Java Tracer JAR.
 
-Declare `DD_TRACER_FOLDER` variable with the path to the folder where you stored the downloaded tracer JAR:
+When specifying tracer arguments, include the following:
 
-{{< code-block lang="shell" >}}
-DD_TRACER_FOLDER=... // e.g. ~/.datadog
-{{< /code-block >}}
-
-Run your tests using the `org.gradle.jvmargs` system property to specify a path to the Datadog Java Tracer JAR.
-
-In the tracer arguments, specify the following:
-
-* CI Visibility is enabled by setting the `dd.civisibility.enabled` property to `true`.
-* The environment where tests are being run (for example, `local` when running tests on a developer workstation or `ci` when running them on a CI provider) is defined in the `dd.env` property.
-* The name of the service or library that is being tested is defined in the `dd.service` property.
+* Enable CI visibility by setting the `dd.civisibility.enabled` property to `true`.
+* Define the environment where the tests are being run using the `dd.env property` (for example `local` when running tests on a developer workstation or `ci` when running them on a CI provider).
+* Define the name of the service or library being tested in the `dd.service property`.
 
 For example:
 
@@ -580,30 +361,7 @@ Always call ``datadog.trace.api.civisibility.DDTestSession#end`` at the end so t
 
 ## Configuration settings
 
-The following system properties set configuration options and have environment variable equivalents. If the same key type is set for both, the system property configuration takes priority. System properties can be set as JVM flags.
-
-`dd.service`
-: Name of the service or library under test.<br/>
-**Environment variable**: `DD_SERVICE`<br/>
-**Default**: `unnamed-java-app`<br/>
-**Example**: `my-java-app`
-
-`dd.env`
-: Name of the environment where tests are being run.<br/>
-**Environment variable**: `DD_ENV`<br/>
-**Default**: `none`<br/>
-**Examples**: `local`, `ci`
-
-`dd.trace.agent.url`
-: Datadog Agent URL for trace collection in the form `http://hostname:port`.<br/>
-**Environment variable**: `DD_TRACE_AGENT_URL`<br/>
-**Default**: `http://localhost:8126`
-
-All other [Datadog Tracer configuration][2] options can also be used.
-
-**Important:** You may want to enable more integrations if you have integration tests. To enable a specific integration, use the [Datadog Tracer Compatibility][3] table to create your custom setup for your integration tests.
-
-For example, to enable `OkHttp3` client request integration, add `-Ddd.integration.okhttp-3.enabled=true` to your setup.
+[Datadog Tracer configuration][2] options can be used for fine-tuning the tracer behavior.
 
 ### Collecting Git metadata
 
@@ -662,19 +420,44 @@ When CI Visibility is enabled, the following data is collected from your project
 * Test names and durations.
 * Predefined environment variables set by CI providers.
 * Git commit history including the hash, message, author information, and files changed (without file contents).
+* Source code information: relative paths to sources of test classes, line numbers of test methods.
 * Information from the CODEOWNERS file.
 
 ## Troubleshooting
 
 ### The tests are not appearing in Datadog after enabling CI Visibility in the tracer
 
-If the tests are not appearing in Datadog, ensure that you are using version 0.91.0 or greater of the Java tracer.
-The `-Ddd.civisibility.enabled=true` configuration property is only available since that version.
+Ensure that you are using the latest version of the tracer.
 
-If you need to use a previous version of the tracer, you can configure CI Visibility by using the following system properties:
-{{< code-block lang="shell" >}}
--Ddd.prioritization.type=ENSURE_TRACE -Ddd.jmxfetch.enabled=false -Ddd.integrations.enabled=false -Ddd.integration.junit.enabled=true -Ddd.integration.testng.enabled=true
-{{< /code-block >}}
+Verify that your build system and testing framework are supported by CI Visibility. See the list of [supported build systems and test frameworks](#compatibility).
+
+Ensure that the `dd.civisibility.enabled` property is set to `true` in the tracer arguments.
+
+Check the build output for any errors that indicate tracer misconfiguration, such as an unset `DD_API_KEY` environment variable.
+
+### Tests or source code compilation fails when building a project with the tracer attached
+
+By default, CI Visibility runs Java code compilation with a compiler plugin attached.
+
+The plugin is optional, as it only serves to reduce the performance overhead.
+
+Depending on the build configuration, adding the plugin can sometimes disrupt the compilation process.
+
+If the plugin interferes with the build, disable it by adding `dd.civisibility.compiler.plugin.auto.configuration.enabled=false` to the list of `-javaagent` arguments.
+
+### Tests fail when building a project with the tracer attached
+
+In some cases attaching the tracer can break tests, especially if they run asserts on the internal state of the JVM or instances of third-party libraries' classes.
+
+While the best approach is such cases is to update the tests, there is also a quicker option of disabling the tracer's third-party library integrations.
+
+The integrations provide additional insights into what happens in the tested code and are especially useful in integration tests, to monitor things like HTTP requests or database calls.
+They are enabled by default.
+
+To disable a specific integration, refer to the [Datadog Tracer Compatibility][3] table for the relevant configuration property names.
+For example, to disable `OkHttp3` client request integration, add `dd.integration.okhttp-3.enabled=false` to the list of `-javaagent` arguments.
+
+To disable all integrations, augment the list of `-javaagent` arguments with `dd.trace.enabled=false`.
 
 ## Further reading
 
@@ -682,4 +465,4 @@ If you need to use a previous version of the tracer, you can configure CI Visibi
 
 [1]: /tracing/trace_collection/custom_instrumentation/java?tab=locally#adding-tags
 [2]: /tracing/trace_collection/library_config/java/?tab=containers#configuration
-[3]: /tracing/trace_collection/compatibility/java
+[3]: /tracing/trace_collection/compatibility/java#integrations
